# potato

./: .clang-format  .gitignore  CMakeLists.txt  premake5.lua  readme.md
cmake/: packages.cmake
sources/: CMakeLists.txt  version.hpp.in
sources/core/: CMakeLists.txt  time.cpp  time.hpp  utils.cpp  utils.hpp
sources/glfwcpp/: CMakeLists.txt  errors.hpp  errors.mpp  glfw.cpp  glfw.hpp  glfw.mpp  glfw_include.hpp  glfwinclude.hpp  input.mpp  keys.hpp  keys.mpp
sources/graphics/: CMakeLists.txt  cmdbuffer.cpp  context.cpp  context.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  memory.cpp  pipeline.cpp  pipeline.hpp  present.cpp  render.cpp  render.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swapchain.cpp  utils.cpp  utils.hpp
sources/graphics/device/: create_info.hpp  device.cpp  device.hpp  memory.cpp
sources/graphics/surface/: surface.cpp  surface.hpp
sources/graphics/swapchain/: cmdbuffer.cpp  present.cpp  renderpass.cpp  swapchain.cpp  swapchain.hpp  sync.cpp
sources/graphics/vkinclude/: vulkan.cpp  vulkan.hpp
sources/modules/: CMakeLists.txt  gen_header.py  glm.imp
sources/pch/: CMakeLists.txt
sources/pch/include/glm/: glm.hpp
sources/pch/include/vulkan/: vulkan.cpp  vulkan.hpp
sources/potato/: CMakeLists.txt  version.hpp.in
sources/potato/core/: arrayvec.hpp  core.mpp  platform.h  thread.cpp  thread.hpp  time.cpp  time.mpp  units.hpp  utils.cpp  utils.hpp  utils.mpp
sources/potato/ecs/: component.hpp  context.cpp  context.hpp  ecs.hpp  entity.cpp  entity.hpp  utils.hpp
sources/potato/graphics/: instance.cpp  instance.mpp  pipeline.cpp  pipeline.hpp  pipeline.mpp  render.cpp  render.mpp  utils.cpp  utils.hpp
sources/potato/graphics/device/: create_info.hpp  create_info.mpp  device.cpp  device.hpp  device.mpp  memory.cpp
sources/potato/graphics/memory/: internal.cpp  internal.hpp  linear_allocator.cpp  linear_allocator.hpp  memory.cpp  memory.hpp  utils.cpp  utils.hpp  vma.cpp  vma.hpp
sources/potato/graphics/memory/allocators/: allocator.md  linear.cpp  linear.hpp
sources/potato/graphics/surface/: surface.cpp  surface.hpp  surface.mpp
sources/potato/graphics/swapchain/: cmdbuffer.cpp  present.cpp  renderpass.cpp  swapchain.cpp  swapchain.hpp  swapchain.mpp  sync.cpp
sources/potato/graphics/utils/: debug_name.cpp  debug_name.hpp  utils.hpp
sources/potato/graphics/vkinclude/: vulkan.cpp
sources/shaders/: CMakeLists.txt  shader.frag  shader.vert
sources/testapp/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
sources/testapp/src/: CMakeLists.txt  test.cpp  test.hpp  test.mpp
sources/testapp/src/render/: camera.cpp  camera.hpp  camera.mpp  primitive.cpp  primitive.hpp  primitive.mpp  render.cpp  render.hpp  render.mpp
sources/utils/: CMakeLists.txt  utils.hpp
